# meal_register

./: .gitignore  LICENSE  README.md  fmt.py  pyproject.toml
.github/workflows/: bandit.yml  codeql.yml  pylint.yml
doc/: Documento de Requisitos - Sistema de Registro de Refeições.docx  __init__.html  __main__.html  constants.html  excel_exporter.html  generic_crud.html  google_creds.html  gui.html  meal_session_handler.html  registro.html  reserves.html  search_students.html  session_dialog.html  session_manage.html  session_metadata_manager.html  sync_session.html  sync_thread.html  tables.html  utils.html
doc/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/html/_modules/: index.html
doc/html/api/: control.html  index.html  model.html  view.html
doc/source/: conf.py  index.rst
doc/source/api/: control.rst  model.rst
logs/: gui.py
registro/: __main__.py
registro/control/: constants.py  excel_exporter.py  generic_crud.py  google_creds.py  meal_session_handler.py  metrics_calculator.py  reserves.py  session_manage.py  session_metadata_manager.py  student_filter.py  sync_session.py  sync_thread.py  utils.py
registro/model/: _tables (WIP).py  _tbl.py  tables (WIP).py  tables.py
registro/view/: _gui.py  action_search_panel.py  class_filter_dialog.py  gui copy.py  gui.py  gui.txt  gui_md.py  metrics_dialog.py  metrics_panel.py  registration_app.py  registroviewsession_dialog.py  search_students.py  session_dialog.py  session_dialog_md.py  simple.py  simple_treeview.py  status_registered_panel.py
(+25 files in other folders)
